# agentscan

./: .agentscan.json  .agentscan.schema.json  .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: action-integration.yml  ci.yml  publish.yml
depkit/: LICENSE  README.md  pyproject.toml
depkit/examples/polyglot-app/: Dockerfile  go.mod  package.json  pyproject.toml  requirements.txt
depkit/examples/polyglot-app/.github/workflows/: ci.yml
depkit/src/depkit/: __init__.py  cli.py  models.py  parsers.py  planner.py  render.py  scanner.py
depkit/tests/: test_cli.py  test_planner.py  test_scanner.py
docs/: LAUNCH.md  demo.md  rules.md
examples/unsafe-repo/: .mcp.json  AGENTS.md  README.md  package.json  secrets.env
examples/unsafe-repo/.github/workflows/: unsafe.yml
src/agentscan/: __init__.py  baseline.py  cli.py  config.py  findings.py  rules.py  scanner.py
tests/: test_cli.py  test_scanner.py
