[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentscan-cli"
version = "0.1.3"
description = "Local-first scanner for AI agent configs, MCP servers, and common repo launch risks."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "AgentScan contributors" }
]
keywords = ["ai-agents", "mcp", "security", "secrets", "cli", "open-source"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Homepage = "https://github.com/agi-for-my-llama/agentscan"
Issues = "https://github.com/agi-for-my-llama/agentscan/issues"
Repository = "https://github.com/agi-for-my-llama/agentscan"

[project.scripts]
agentscan = "agentscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentscan"]
