[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depkit"
version = "0.1.0"
description = "Dependency lifecycle planning for real-world upgrade work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DepKit contributors" }]
keywords = ["dependencies", "upgrades", "renovate", "dependabot", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
depkit = "depkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/depkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
